syntax = "proto3";

package authentication;

option go_package = "github.com/MatthewSerre/car/authentication/proto";

service AuthenticationService {
    rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
    string pin = 3;
}

message LoginResponse {
    string username = 1;
    string pin = 2;
    string jwt_token = 3;
    int64 jwt_expiry = 4;
}